# Groupmanagement

./: .env  .env.development  .gitignore  BETS_PAGINATION_SUMMARY.md  DRAWS_COMMAND_ADMIN_SUMMARY.md  FISHING_INTEGRATION_SUMMARY.md  FISHING_SYSTEM_SUMMARY.md  LOTTERY_BASE_INTEGRATION.md  LOTTERY_HANDLER_REFACTOR_SUMMARY.md  LOTTERY_SYSTEM_SUMMARY.md  MULTI_GROUP_LOTTERY_SUMMARY.md  README.md  buy_mining_card.py  check_account.py  check_mining.py  check_mining_card_status.py  check_mining_cards.py  check_mining_rewards.py  checkin_test_README.md  claim_mining_rewards.py  compose.override.yml  compose.prod.yml  compose.yml  deploy.sh  fix_mining_card.py  get_group_info.py  lottery_demo_with_base.py  multi_group_demo.py  process_mining_rewards.py  pyproject.toml  reset_checkin_data.py  start_lottery_demo.py  test_bet_feedback.py  test_bet_formats.py  test_bet_message_parser.py  test_bets_command.py  test_callback_parsing.py  test_checkin.py  test_draw_number.py  test_duplicate_bet_check.py  (+12 more)
api/: main.py
bot/: __main__.py  config.py  ioc.py  main.py  misc.py  states.py  telethon_client.py
db/: password.txt
docs/: config_management.md  database_integration.md  fishing_system.md  get_group_info.md  group_message_monitor.md  lottery_system.md  mining_system.md  mining_system_fix.md  text_message_monitor.md  transaction_types.md
examples/: fishing_example.py  mining_batch_test.py  mining_example.py
migrations/: env.py  fishing_system_integration.sql  lottery_tables.sql  mining_tables.sql
sessions/: monitor_session.session  telegram_session.session
(+53 files in other folders)
