[project]
name = "bot_template"
version = "0.1.0"
description = "This template provides clean start to create bot using aiogram."
authors = [
    {name = "Author Name", email = "arturboyun@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.1",
    "alembic>=1.13.3",
    "aiomysql>=0.2.0",
    "cryptography>=42.0.0",
    "dishka>=1.4.0",
    "fastapi[standard]>=0.115.5",
    "pydantic-settings>=2.6.0",
    "qrcode>=7.4.2",
    "pillow>=10.2.0",
    "tronpy>=0.3.0",
    "redis>=5.2.0",
    "ruff>=0.7.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "telethon>=1.34.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
]
